<resources>
    <string name="app_name">TCC</string>

    <string name="text_login">LOGIN</string>
    <string name="text_email">Digite seu e-mail</string>
    <string name="text_senha">Digite sua senha</string>
    <string name="text_confsenha">Confirme sua senha</string>
    <string name="text_nome">Digite seu nome</string>
    <string name="text_welcome">Seja bem-vindo</string>

    //Nome das telas
    <string name="text_pedidos">Pedidos</string>
    <string name="text_perfil">Perfil</string>
    <string name="text_cardapio">Cardapio</string>
    <string name="text_inicio">Inicio</string>


    <string name="btn_entrar">ENTRAR</string>
    <string name="btn_cadastrar">CADASTRAR</string>
    <string name="btn_contaextn">Entrar na conta</string>
    <string name="btn_redsenha">Esqueci minha senha</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_salvar">Salvar</string>


    <string name="btn_lanche">Lanche</string>
    <string name="btn_salgado">Salgado</string>
    <string name="btn_marmita">Maritex</string>
    <string name="btn_refri">Refrigerante</string>
    <string name="btn_suco">Suco</string>
    <string name="btn_agua">Agua</string>
    <string name="btn_sorvete">Sorvete</string>
    <string name="btn_salgadinho">Salgadinhos</string>
    <string name="btn_doce">Doce</string>
    <string name="btn_detalhe"> Ver detalhes</string>

</resources>

