<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/background_image"
        tools:layout_editor_absoluteX="-59dp"
        tools:layout_editor_absoluteY="0dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradiente"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="58dp" />

    <TextView
        android:id="@+id/text_Welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/text_welcome"
        android:textColor="@color/colorAccent2"
        android:textSize="38sp"
        app:layout_constraintBottom_toTopOf="@+id/button_user" />

    <EditText
        android:id="@+id/button_user"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_tranparent"
        android:hint="@string/text_nome"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/colorAccent2"
        android:textColorHint="#ECECEC"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/button_email" />

    <EditText
        android:id="@+id/button_email"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_tranparent"
        android:hint="@string/text_email"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/colorAccent2"
        android:textColorHint="#ECECEC"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/button_passaword" />

    <EditText
        android:id="@+id/button_passaword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_tranparent"
        android:hint="@string/text_senha"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/colorAccent2"
        android:textColorHint="#ECECEC"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/button_confirm_psword" />
    <EditText
        android:id="@+id/button_confirm_psword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_tranparent"
        android:hint="@string/text_confsenha"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/colorAccent2"
        android:textColorHint="#ECECEC"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/bunttonLogin" />

    <Button
        android:id="@+id/bunttonLogin"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_gradiente"
        android:text="@string/btn_cadastrar"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/text_cont_extn" />

    <TextView
        android:id="@+id/text_cont_extn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/btn_contaextn"
        android:textColor="@color/colorAccent2"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"/>





</androidx.constraintlayout.widget.ConstraintLayout>